pl5.jcn3
	- website fixes

pl5.jcn2
	- extender-*, see input/test/extender.ly
	- bf: half-beam length (urg)
	- fixes: standchen, star

pl5.jcn1
	- tex/lily-ps-defs.tex fixes
	- lily.ps 

********
1.1.5

pl4.jcn4
	- fixes; preludes, finger

pl4.jcn3
	- bf: text staff vertical align; see input/test/vertical-text.ly
	- urg, scaled cmr8 by factor 4/5
	- apart from end/begin of measure spacing urgs, stars-and-stripes.ly 
	  is rather cool

pl4.jcn2
 	- read (cmrxx)afm for text char widths
 	- tfmtoafm.sh (quite urg)
 	- alphabet.ly
 
pl 4.uu1
	- read .scm files. No need for GUILE_LOAD_PATH
	- .ps hack.  No need for lily.ps on the printer
	
	(&$^@M&@^$@^&$@ Damn TeX)


	- bf: mudela-book -> \default_paper is obsolete.

pl 3.ms1
         - thumb-upgrade
 
pl4.jcn1
	- bf: dotted slur
	- bf: text ssb
	- bf: empty/unknown in ps

pl 4.tca1
 	- 40% speedup executing mudela-book on mudela-book-doc.doc
 	- change of lilypond's output filenames. Given multiple input
 	  files, eg. 'm.ly y.ly', output names will now be 'm.tex y.tex'
 	  not 'm.tex y-1.tex', but if m.ly containts two paper definitions
 	  output will be 'm.tex m-1.tex y.tex' 

*******
1.1.4

pl 3.tca1
 	- accordion symbols in mf/feta-accordion.mf and
 	  init/accordion-defs.ly.
 	- small changes to mudela-book and Documentation/man/mudela-book.yo
 	- mudela-book example file in Documentation/tex/mudela-book-doc.doc

pl 3.jcn5
        - bf: dashed-slur
        - bf: LilyIdString
        - more star fixes
        - repeatbar fixes

pl 3.jcn3
 	- mup-to-ly.py: version 0.0
 	- init/test/stars-and-stripes.ly (from star.mup)
	- GrandStaffContext
  
pl 3.hwn1
	- junked musical info from key-item
	- tutorial fixes.

pl 3.jcn2
 	- bf: font switch
 
******
1.1.3

pl 2.jcn2

pl 2.uu1
	- ly2dvi.py -I fix
	- obsoleted ly2dvi.sh
 	- removed Note_head_engraver

pl 2.hwn1
 	- scm cleanups, chop-decimal
 	- scarlatti clef.

pl 2.jcn1
	- commented-out Level-2 PostScript in lily.ps (J. Buehler)
	- moved tex/*.ps to ps/