@@ -1,3 +1,7 @@
+pl5.jcn4
+	- scm additions: plet, hairpin
+	- website fixes
+
 pl5.jcn3
 	- website fixes
 
